syntax = "proto3";

package giftduels.identity.v1;

import "giftduels/identity/v1/user.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/identity/v1;identityv1";

service IdentityPublicService {
  // Authorize user via Telegram WebApp InitData
  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse) {}

  // Get current user profile
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  rpc GetProfile(google.protobuf.Empty) returns (GetProfileResponse) {}
}

message GetProfileResponse {
  UserProfile profile = 1;
}

message AuthorizeRequest {
  string init_data = 1; // Telegram WebApp InitData
}

message AuthorizeResponse {
  string token = 1;
}
